# MEMERIS

./: .travis.yml  AUTHORS  COPYING  ChangeLog  Changes_MH  GetSecondaryStructureValues.perl  INSTALL  Makefile.am  Makefile.in  README  README.md  README_GetSecondaryStructureValues  README_MEMERIS  ReplaceUbyT.perl  Uniform_bfile  bootstrap  config.h.in  configure  configure.ac
etc/: Makefile.am  Makefile.in  mast.doc  mast_db.list  mast_upstream_db.list  meme-explanation.html  meme.csh.in  meme.doc  meme.irix.in  meme.linux.in  meme.sh.in  meme.solaris.in  prior1.plib  prior30.plib
m4/: functions.m4  headers.m4
scripts/: Makefile.am  Makefile.in  cat_max.txt  compare_dates.txt  convert2html.txt  download  fasta-get-markov.txt  fasta-make-index.txt  fasta-shuffle-letters.txt  fasta-unique-names.txt  lrun.txt  mailer.txt  make_logodds.txt  mast-client.txt  mast.txt  mast2html.pl  meme-client.txt  meme.txt  meme2html.pl  meme_config.csh.txt  meme_config.txt  memed.txt  plot-usage  plotgen  roc.txt  rocket  runcheck  runtests.txt  sd  start-mast.txt  start-meme.txt  texit  transfac2meme.txt  update-plot-usage.txt  update_mast_databases.txt  update_meme_tests  usage-reports
src/: Makefile.am  Makefile.in  alphtype.c  background.c  banner.c  clock.c  diagram.c  discretize.c  display.c  dpalign.c  em.c  gamma.c  getsize.c  hash.c  hash_alph.c  init.c  io.c  justlike.c  likelihood.c  llr.c  logodds.c  logs.c  mast-server.c  mast-util.c  mast.c  meme-client.c  meme-server.c  meme.c  meme_util.c  message.c  motifs.c  mp.c  oops.c  prior.c  pssm-distr.c  read_seq_file.c  readseq.c  readwrite.c  regress.c  seq2theta.c  (+4 more)
src/include/: ProfileNormal.h  aa.h  align.h  background.h  banner.h  chi.h  clock.h  curves.h  diagram.h  display.h  dpalign.h  em.h  gamma.h  general.h  hash.h  hash_alph.h  hashu.h  histogram.h  ic.h  io.h  llr.h  logodds.h  logs.h  macros.h  mast.h  meme-cs.h  meme.h  message.h  motifnormal.h  motifs.h  mp.h  mtype.h  nrutil.h  prior.h  projrel.h  pssm-distr.h  read_seq_file.h  readwrite.h  regress.h  rtarray.h  (+5 more)
src/include/CVS/: Entries  Repository
src/libadd/: strlcpy.c
src/libadd/CVS/: Entries  Repository  Root  Tag
src/parallel/: Makefile  Makefile.am  Makefile.in
src/parallel/CVS/: Entries  Repository
tests/: Makefile.am  Makefile.in  mast.INO_up800.oops  mast.INO_up800.tcm  mast.INO_up800.zoops  mast.adh.oops  mast.adh.oops.mini-drosoph.s  mast.adh.tcm  mast.adh.tcm.mini-drosoph.s  mast.adh.zoops  mast.adh.zoops.mini-drosoph.s  mast.crp0.oops  mast.crp0.tcm  mast.crp0.zoops  mast.farntrans5.oops  mast.farntrans5.tcm  mast.farntrans5.zoops  mast.lipocalin.oops  mast.lipocalin.tcm  mast.lipocalin.zoops  meme.INO_up800.oops  meme.INO_up800.tcm  meme.INO_up800.zoops  meme.adh.oops  meme.adh.tcm  meme.adh.zoops  meme.crp0.oops  meme.crp0.tcm  meme.crp0.zoops  meme.farntrans5.oops  meme.farntrans5.tcm  meme.farntrans5.zoops  meme.lipocalin.oops  meme.lipocalin.tcm  meme.lipocalin.zoops
website/: Makefile.am  Makefile.in
website/cgi-bin/: Makefile.am  Makefile.in  job-status.pl  mast.pl  meme.pl  process_request.pl
website/examples/: Makefile.am  Makefile.in  sample-motif.dna
website/html/: Makefile.am  Makefile.in  general-faq.html  head-copyright  help_alphabet.html  help_distribution.html  help_format.html  intro.in  job-status.html  mast-databases.html  mast-faq.html  mast-input.html  mast-intro.html  mast-output-example.html  mast-output.html  mast.in  meme-download.html  meme-faq.html  meme-input.html  meme-install.html  meme-intro.html  meme-output-example.html  meme.in  motif-format.html  papers.html  release_notes.html
website/images/: Makefile.am  Makefile.in
website/scripts/: Globals.txt  Makefile.am  Makefile.in  Validation.txt
