## $Id: Makefile.am,v 1.3 2005/12/16 21:50:39 nadya Exp $
##
## Process this file with automake to produce Makefile.in
##
## # $Log: Makefile.am,v $
## # Revision 1.3  2005/12/16 21:50:39  nadya
## # always install files in tests/
## #
## # Revision 1.2  2005/08/20 04:13:39  nadya
## # add missing tests results
## #
## # Revision 1.1.1.1  2005/07/31 19:35:29  nadya
## # Importing from meme-3.0.14, and adding configure/make
## #
##

AUTOMAKE_OPTIONS = no-dependencies

testdir = $(prefix)/tests
test_DATA = $(DATAFILES)

DATAFILES = \
	INO_up800.s \
	adh.s \
	crp0.s \
	farntrans5.s \
	lex0.s \
	lipocalin.s \
	mast.INO_up800.oops \
	mast.INO_up800.tcm \
	mast.INO_up800.zoops \
	mast.adh.oops \
	mast.adh.oops.mini-drosoph.s \
	mast.adh.tcm \
	mast.adh.tcm.mini-drosoph.s \
	mast.adh.zoops \
	mast.adh.zoops.mini-drosoph.s \
	mast.crp0.oops \
	mast.crp0.tcm \
	mast.crp0.zoops \
	mast.farntrans5.oops \
	mast.farntrans5.tcm \
	mast.farntrans5.zoops \
	mast.lipocalin.oops \
	mast.lipocalin.tcm \
	mast.lipocalin.zoops \
	meme.INO_up800.oops \
	meme.INO_up800.tcm \
	meme.INO_up800.zoops \
	meme.adh.oops \
	meme.adh.tcm \
	meme.adh.zoops \
	meme.crp0.oops \
	meme.crp0.tcm \
	meme.crp0.zoops \
	meme.farntrans5.oops \
	meme.farntrans5.tcm \
	meme.farntrans5.zoops \
	meme.lipocalin.oops \
	meme.lipocalin.tcm \
	meme.lipocalin.zoops \
	mini-drosoph.s \
	noq.s \
	nr.freq \
	nt.freq \
	uprot.freq \
	yeast.nc.1.freq \
	yeast.nc.3.freq \
	yeast.nc.6.freq 

EXTRA_DIST = $(DATAFILES)
