## $Id: Makefile.am,v 1.2 2005/08/07 04:45:13 nadya Exp $
##
## Process this file with automake to produce Makefile.in
##
## # $Log: Makefile.am,v $
## # Revision 1.2  2005/08/07 04:45:13  nadya
## # add missing host_logo.png
## #
## # Revision 1.1.1.1  2005/07/25 23:17:43  nadya
## # Importing from meme-3.0.14, and adding configure/make
## #
##

AUTOMAKE_OPTIONS = no-dependencies

if WEBSITE
imgdir = $(WEBDIR)/images
img_DATA = $(IMAGES)
endif

IMAGES = \
	acb_logo.png \
	bkg.jpg \
	mast.png \
	meme.png \
	nbcr_logo.png \
	pasteur_logo.png \
	sdsc_logo.png \
	ucsd_logo.png \
	host_logo.png \
	uq_logo.png 

EXTRA_DIST = $(IMAGES)
